package com.microservice.user_service.controller;

import com.microservice.user_service.client.ContentServiceClient;
import com.microservice.user_service.client.PaymentServiceClient;
import com.microservice.user_service.client.ProfileServiceClient;
import com.microservice.user_service.client.SubscriptionServiceClient;
import com.microservice.user_service.dto.response.UserDashboardResponse;
import com.microservice.user_service.dto.response.UserDashboardResponse.*;
import com.microservice.user_service.entity.UserProfile;
import com.microservice.user_service.service.UserProfileService;
import org.slf4j.Logger;
import org.slf4j.LoggerFactory;
import org.springframework.beans.factory.annotation.Qualifier;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.*;

import java.time.LocalDateTime;
import java.util.ArrayList;
import java.util.List;
import java.util.concurrent.CompletableFuture;
import java.util.concurrent.Executor;
import java.util.stream.Collectors;

/**
 * User Dashboard Controller - Service Chain Test Endpoint
 * 
 * Bu controller mikroservisler arasƒ± ileti≈üim performansƒ±nƒ± test etmek i√ßin
 * olu≈üturulmu≈ütur.
 * Tek bir endpoint √ßaƒürƒ±sƒ± ile 5 farklƒ± servise HTTP istekleri g√∂nderir:
 * 1. Profile Service - Kullanƒ±cƒ± profilleri
 * 2. Subscription Service - Aktif abonelik
 * 3. Payment Service - Son √∂demeler
 * 4. Content Service - √ñnerilen i√ßerikler
 * 5. Watch History - ƒ∞zleme ge√ßmi≈üi (mock)
 * 
 * Protocol Comparison: REST vs gRPC vs GraphQL performans kar≈üƒ±la≈ütƒ±rmasƒ± i√ßin
 * kullanƒ±lƒ±r.
 * 
 * IMPROVEMENT: Updated to use execute parallel HTTP calls.
 */
@RestController
@RequestMapping("/api/users/analytics")
public class UserDashboardController {

        private static final Logger log = LoggerFactory.getLogger(UserDashboardController.class);

        private final UserProfileService userProfileService;
        private final ProfileServiceClient profileServiceClient;
        private final SubscriptionServiceClient subscriptionServiceClient;
        private final PaymentServiceClient paymentServiceClient;
        private final ContentServiceClient contentServiceClient;
        private final Executor restExecutor;

        public UserDashboardController(
                        UserProfileService userProfileService,
                        ProfileServiceClient profileServiceClient,
                        SubscriptionServiceClient subscriptionServiceClient,
                        PaymentServiceClient paymentServiceClient,
                        ContentServiceClient contentServiceClient,
                        @Qualifier("restExecutor") Executor restExecutor) {
                this.userProfileService = userProfileService;
                this.profileServiceClient = profileServiceClient;
                this.subscriptionServiceClient = subscriptionServiceClient;
                this.paymentServiceClient = paymentServiceClient;
                this.contentServiceClient = contentServiceClient;
                this.restExecutor = restExecutor;
        }

        /**
         * User Dashboard Endpoint - Service Chain Test
         * 
         * GET /api/user/analytics/dashboard/{userId}
         * 
         * Bu endpoint √ßaƒürƒ±ldƒ±ƒüƒ±nda backend'de ≈üu akƒ±≈ü ger√ßekle≈üir:
         * 1. Local user bilgisi alƒ±nƒ±r
         * 2. Profile Service'e Feign HTTP call (REST: ~80-100ms)
         * 3. Subscription Service'e Feign HTTP call (REST: ~80-100ms)
         * 4. Payment Service'e Feign HTTP call (REST: ~80-100ms)
         * 5. Content Service'e Feign HTTP call (REST: ~80-100ms)
         * 6. Watch History mock data (local: ~5ms)
         * 
         * TOPLAM BEKLENEN S√úRE (REST Parallel): ~150-200ms
         */
        @GetMapping("/dashboard/{userId}")
        public ResponseEntity<UserDashboardResponse> getUserDashboard(
                        @PathVariable String userId,
                        @RequestHeader(value = "X-User-Id", required = false) String headerUserId) {

                long startTime = System.currentTimeMillis();
                log.info("üìä [SERVICE CHAIN TEST - REST PARALLEL] Starting dashboard request for userId: {}", userId);

                try {
                        // 1. LOCAL: Get user info from database
                        long step1Start = System.currentTimeMillis();
                        com.microservice.user_service.dto.response.UserProfileResponse userProfileResponse = userProfileService
                                        .getUserProfileByUserId(userId);
                        log.info("  ‚úì Step 1 [LOCAL] User info retrieved - {}ms",
                                        System.currentTimeMillis() - step1Start);

                        UserInfo userInfo = UserInfo.builder()
                                        .userId(userProfileResponse.getUserId())
                                        .email(userProfileResponse.getEmail())
                                        .firstName(userProfileResponse.getFirstName())
                                        .lastName(userProfileResponse.getLastName())
                                        .build();

                        // PARALLEL EXECUTION START
                        log.info("  üöÄ Starting parallel REST calls on dedicated executor...");
                        long parallelStartTime = System.currentTimeMillis();

                        // 2. HTTP CALL: Profile Service (Feign REST)
                        CompletableFuture<List<ProfileInfo>> profilesFuture = CompletableFuture
                                        .supplyAsync(() -> {
                                                try {
                                                        long start = System.currentTimeMillis();
                                                        List<ProfileInfo> profiles = profileServiceClient
                                                                        .getProfilesByAccountId(userId);
                                                        log.info("    ‚úì Parallel [REST->Profile] - {}ms",
                                                                        System.currentTimeMillis() - start);
                                                        return profiles;
                                                } catch (Exception e) {
                                                        log.warn("    ‚ö† Parallel [REST->Profile] FAILED: {} - Returning empty list",
                                                                        e.getMessage());
                                                        return new ArrayList<>();
                                                }
                                        }, restExecutor);

                        // 3. HTTP CALL: Subscription Service (Feign REST)
                        CompletableFuture<SubscriptionInfo> subFuture = CompletableFuture
                                        .supplyAsync(() -> {
                                                try {
                                                        long start = System.currentTimeMillis();
                                                        SubscriptionInfo subscription = subscriptionServiceClient
                                                                        .getActiveSubscription(userId);
                                                        if (subscription != null && subscription.getPlan() != null) {
                                                                subscription.setPlanName(
                                                                                subscription.getPlan().getPlanName());
                                                        }
                                                        log.info("    ‚úì Parallel [REST->Subscription] - {}ms",
                                                                        System.currentTimeMillis() - start);
                                                        return subscription;
                                                } catch (Exception e) {
                                                        log.warn("    ‚ö† Parallel [REST->Subscription] FAILED: {} - Returning null",
                                                                        e.getMessage());
                                                        return null;
                                                }
                                        }, restExecutor);

                        // 4. HTTP CALL: Payment Service (Feign REST)
                        CompletableFuture<List<PaymentInfo>> paymentsFuture = CompletableFuture
                                        .supplyAsync(() -> {
                                                try {
                                                        long start = System.currentTimeMillis();
                                                        List<PaymentInfo> allPayments = paymentServiceClient
                                                                        .getRecentPayments(userId);
                                                        // Get last 5 payments
                                                        List<PaymentInfo> filtered = allPayments.stream().limit(5)
                                                                        .collect(Collectors.toList());
                                                        log.info("    ‚úì Parallel [REST->Payment] - {}ms",
                                                                        System.currentTimeMillis() - start);
                                                        return filtered;
                                                } catch (Exception e) {
                                                        log.warn("    ‚ö† Parallel [REST->Payment] FAILED: {} - Returning empty list",
                                                                        e.getMessage());
                                                        return new ArrayList<>();
                                                }
                                        }, restExecutor);

                        // 5. HTTP CALL: Content Service (Feign REST)
                        CompletableFuture<List<ContentInfo>> contentsFuture = CompletableFuture
                                        .supplyAsync(() -> {
                                                try {
                                                        long start = System.currentTimeMillis();
                                                        List<ContentInfo> allContents = contentServiceClient
                                                                        .getAllContents();
                                                        // Get first 10 as recommended
                                                        List<ContentInfo> filtered = allContents.stream().limit(100)
                                                                        .collect(Collectors.toList());
                                                        log.info("    ‚úì Parallel [REST->Content] - {}ms",
                                                                        System.currentTimeMillis() - start);
                                                        return filtered;
                                                } catch (Exception e) {
                                                        log.warn("    ‚ö† Parallel [REST->Content] FAILED: {} - Returning empty list",
                                                                        e.getMessage());
                                                        return new ArrayList<>();
                                                }
                                        }, restExecutor);

                        // Wait for all to complete
                        CompletableFuture
                                        .allOf(profilesFuture, subFuture, paymentsFuture, contentsFuture).join();

                        List<ProfileInfo> profiles = profilesFuture.get();
                        SubscriptionInfo subscription = subFuture.get();
                        List<PaymentInfo> payments = paymentsFuture.get();
                        List<ContentInfo> recommendedContents = contentsFuture.get();

                        log.info("  üöÄ All parallel calls completed in {}ms (Truly Parallelized)",
                                        System.currentTimeMillis() - parallelStartTime);

                        // 6. LOCAL: Mock watch history (no external service)
                        long step6Start = System.currentTimeMillis();
                        WatchHistoryInfo watchHistory = WatchHistoryInfo.builder()
                                        .totalWatched(42)
                                        .recentWatchCount(12)
                                        .lastWatchedDate(LocalDateTime.now().toString())
                                        .build();
                        log.info("  ‚úì Step 6 [LOCAL] Watch history created - {}ms",
                                        System.currentTimeMillis() - step6Start);

                        // Build final response
                        UserDashboardResponse response = UserDashboardResponse.builder()
                                        .user(userInfo)
                                        .profiles(profiles)
                                        .subscription(subscription)
                                        .recentPayments(payments)
                                        .recommendedContents(recommendedContents)
                                        .watchHistory(watchHistory)
                                        .build();

                        long totalTime = System.currentTimeMillis() - startTime;
                        log.info("üìä [SERVICE CHAIN TEST - REST PARALLEL] ‚úÖ Dashboard request completed - TOTAL TIME: {}ms",
                                        totalTime);
                        log.info("   Protocol: REST PARALLEL | Service Calls: 4 HTTP ||");

                        return ResponseEntity.ok(response);

                } catch (Exception e) {
                        long totalTime = System.currentTimeMillis() - startTime;
                        log.error("üìä [SERVICE CHAIN TEST - REST PARALLEL] ‚ùå Dashboard request FAILED - {}ms - Error: {}",
                                        totalTime, e.getMessage(), e);
                        throw new RuntimeException("Failed to get user dashboard: " + e.getMessage(), e);
                }
        }

        /**
         * Health check endpoint
         */
        @GetMapping("/health")
        public ResponseEntity<String> health() {
                return ResponseEntity.ok("User Analytics Service is running - Service Chain Test Ready (Parallel)");
        }
}
